Added IDE patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-# Compiled class file
+.DS_Store
+
 *.class
+
+bin/
+.settings/
+
+# Eclipse files
+.project
+.classpath
+.metadata/
+
+# IntelliJ
+.idea/
+*.iml
+*.ipr
+*.iws
+atlassian-ide-plugin.xml
+
+# Maven files
+target/
 
 # Log file
 *.log
