Log configuration for file output.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,7 @@ logging:
   level:
     com.gym: "DEBUG"
     root: "INFO"
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSSXXX} %5p ${PID:- } --- [%15.15t] %-40.40logger{39} : %m%n%wEx"
+  file:
+    name: logs/application.log
