--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,22 @@
     <description>Collects and parses data to enrich and validate college team rosters.</description>
     <properties>
         <java.version>17</java.version>
-        <jsoup.version>1.19.1</jsoup.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>${jsoup.version}</version>
+            <version>1.19.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.31.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>6.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
