--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,18 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/doubletuck/gym-common</url>
+        </repository>
+    </repositories>
     <dependencies>
+        <dependency>
+            <groupId>com.doubletuck</groupId>
+            <artifactId>gym-common</artifactId>
+            <version>0.0.2</version>
+        </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
